# lv_x8

./: .gitignore  LvDevProfile.json  Makefile  README.md  ROKIDevProfile.json  RecipesDetails.json  liblinktool  lv_100ask_page_manager.c  lv_100ask_page_manager.h  lv_X8app  lv_conf.h  lv_drv_conf.h  lv_font_SiYuanHeiTi_Normal_20.c  lv_font_SiYuanHeiTi_Normal_24.c  lv_rokiapp  main.c  makefile  zlog_lvgl.conf
liblinktool/include/: networkFunc.h
liblvgl/: Makefile  chinese.txt  lv_conf.h  lv_conf1.h  lv_conf2.h  lv_font_SiYuanHeiTi_Normal_24.c  lv_font_SiYuanHeiTi_Normal_26.c
liblvgl/lv_100ask_page_manager/: lv_100ask_page_manager.c  lv_100ask_page_manager.h
libpaho-mqtt3/lib/: libpaho-mqtt3a.so.1.3.12  libpaho-mqtt3c.so.1.3.12
linktool/: CMakeLists.txt  makefile  pid.c  pid.h
linktool/bmp/: bmpTool.c  bmpTool.h
linktool/md5/: md5_func.c
linktool/queue/: mqueue.c  mqueue.h  ring_buffer.c  ring_buffer.h
linktool/tcp/: tcp.c  tcp.h  tcp_uds.c
linktool/tcp/epoll/: epollClient.c  epollReactor.c  epollReactor.h  epollServer.c
linktool/tcp/select/: select_server.c
linktool/tcp/select/example/: select_tcp_server.c  select_tcp_server.h
linktool/tcp/thread/: thread2Client.c  thread2Client.h  threadClient.c  threadServer.c
linktool/timer/: POSIXTimer.c  POSIXTimer.h
linktool/tool/: commonFunc.c  commonFunc.h  logFunc.c  logFunc.h  networkFunc.c  socketFunc.c
lv_100ask_page_manager/: lv_100ask_page_manager.c  lv_100ask_page_manager.h
lv_100ask_pinyin_ime/: lv_100ask_pinyin_ime.c  lv_100ask_pinyin_ime.h
lv_drivers/indev/: evdev.c
lv_roki/: lv_roki.h  lv_roki.mk  lv_roki_ext.h  lvgl_roki_main.c
lv_roki/lv_100ask_page_manager/: lv_100ask_page_manager.c  lv_100ask_page_manager.h  lv_page_manager.mk
lv_roki/lv_100ask_page_manager_test/: simple_test.h
lv_roki/lv_100ask_pinyin_ime/: lv_100ask_pinyin_ime.c  lv_100ask_pinyin_ime.h  lv_pinyin_ime.mk
lv_roki/lv_100ask_pinyin_ime_test/: simple_test.h
lv_roki/src/: lv_roki_main.c  lv_roki_widgets.c
lv_test/: lv_test.h  lv_test.mk
lv_test/lv_100ask_page_manager_test/: simple_test.c  simple_test.h
lv_test/lv_100ask_pinyin_ime_test/: simple_test.c  simple_test.h
lv_test/src/: lv_auto_dialog.c  lv_auto_dialog.h  lv_custom_item.c  lv_custom_item.h  lv_cycle_scroll.c  lv_cycle_scroll.h  lv_manual_dialog.c  lv_manual_dialog.h  lv_page_about.c  lv_page_back_bar.c  lv_page_close_heat.c  lv_page_cook_details.c  lv_page_hood.c  lv_page_local_set.c  lv_page_reset.c  lv_page_screen_line.c  lv_page_set.c  lv_page_smart_cook.c  lv_page_smartrecipes.c  (+13 more)
roki/: main.c  main.h
(+106 files in other folders)
